feat: Add Cloudflare DNS configuration to Terraform
- Add Cloudflare provider and variables
- Add DNS records for custom domain
- Update GitHub Actions workflow to pass Cloudflare secrets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,9 @@ jobs:
         working-directory: ./terraform
         run: |
           terraform apply -auto-approve \
-            -var="project_id=${{ env.PROJECT_ID }}"
+            -var="project_id=${{ env.PROJECT_ID }}" \
+            -var="cloudflare_api_token=${{ secrets.CLOUDFLARE_API_TOKEN }}" \
+            -var="cloudflare_zone_id=${{ secrets.CLOUDFLARE_ZONE_ID }}"
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
