--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,4 +65,5 @@ jobs:
         # usually `firebase deploy --project $PROJECT_ID` works if GOOGLE_APPLICATION_CREDENTIALS is set by the auth action.
         run: |
           npm install -g firebase-tools
-          firebase deploy --only hosting --project ${{ env.PROJECT_ID }} --non-interactive
+          firebase target:apply hosting card ${{ env.PROJECT_ID }}-card
+          firebase deploy --only hosting:card --project ${{ env.PROJECT_ID }} --non-interactive
