fix: Update CI/CD and Terraform config for successful deployment
- Pass `github_repo` variable to Terraform in GitHub Actions workflow
- Remove duplicate variable definition in `terraform/iam.tf`
- Rename bootstrap script to `scripts/setup_gcp.sh` and update logic to import/create WIF resources

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,7 @@ jobs:
         run: |
           terraform apply -auto-approve \
             -var="project_id=${{ env.PROJECT_ID }}" \
+            -var="github_repo=${{ github.repository }}" \
             -var="cloudflare_api_token=${{ secrets.CLOUDFLARE_API_TOKEN }}" \
             -var="cloudflare_zone_id=${{ secrets.CLOUDFLARE_ZONE_ID }}"
 
